--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Общие стили для страницы */
 body {
   display: flex;
   justify-content: center;
@@ -9,7 +8,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-/* Оформление контейнера калькулятора */
 .calculator {
   width: 320px;
   background-color: #2d3436;
@@ -18,7 +16,6 @@ body {
   padding: 20px;
 }
 
-/* Поле для ввода */
 #display {
   width: 100%;
   height: 80px;
@@ -31,7 +28,6 @@ body {
   box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-/* Контейнер для кнопок */
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -39,7 +35,6 @@ body {
   margin-top: 20px;
 }
 
-/* Стиль кнопок */
 button {
   height: 70px;
   font-size: 1.5em;
@@ -51,30 +46,6 @@ button {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* Цветовые вариации кнопок */
-button:nth-child(4n) {
-  background-color: #fdcb6e;
-  color: #2d3436;
-}
-
-button:nth-child(4n):hover {
-  background-color: #ffeaa7;
-}
-
-button:nth-child(3n) {
-  background-color: #00cec9;
-  color: white;
-}
-
-button:nth-child(3n):hover {
-  background-color: #81ecec;
-}
-
-button.zero {
-  grid-column: span 2;
-}
-
-/* Кнопка очистки и удаления */
 button:first-child,
 button:nth-child(2) {
   background-color: #d63031;
@@ -86,7 +57,32 @@ button:nth-child(2):hover {
   background-color: #ff7675;
 }
 
-/* Плавное нажатие кнопок */
+button:nth-child(3),
+button:nth-child(4),
+button:nth-child(8),
+button:nth-child(12),
+button:nth-child(16) {
+  background-color: #fdcb6e;
+  color: #2d3436;
+}
+
+button:nth-child(3):hover,
+button:nth-child(4):hover,
+button:nth-child(8):hover,
+button:nth-child(12):hover,
+button:nth-child(16):hover {
+  background-color: #ffeaa7;
+}
+
+button {
+  background-color: white;
+  color: #2d3436;
+}
+
+button.zero {
+  grid-column: span 2;
+}
+
 button:active {
   transform: scale(0.95);
 }
